[tool.poetry]
name = "han"
version = "0.1.0"
description = ""
authors = ["piqizhu"]
readme = "说明.md"
homepage = "https://github.com/piqizhu/han"
repository = "https://github.com/piqizhu/han"


[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
